[gd_scene load_steps=21 format=2]

[ext_resource path="res://Images/icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/NPC.gd" type="Script" id=2]
[ext_resource path="res://Images/Enemy Blob.png" type="Texture" id=3]
[ext_resource path="res://Images/FlappingWing.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
height = 28.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 300.0

[node name="NPC" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 8 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Head" type="KinematicBody2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Head"]
z_index = 4
frames = SubResource( 3 )

[node name="Body" type="KinematicBody2D" parent="."]

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Body"]
z_index = 3
frames = SubResource( 5 )

[node name="Wing" type="KinematicBody2D" parent="."]
position = Vector2( -1, 20 )
z_index = 6

[node name="AnimatedSprite" type="AnimatedSprite" parent="Wing"]
frames = SubResource( 8 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 8 )
shape = SubResource( 6 )

[node name="FlapTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="FlapTimer2" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="FlapTimer" to="." method="_on_FlapTimer_timeout"]
[connection signal="timeout" from="FlapTimer2" to="." method="_on_FlapTimer2_timeout"]
